@@ -1,3 +1,12 @@
+2010-02-01  Kavita Kanetkar  <kkanetkar@chromium.org>
+
+        Reviewed by Nate Chapin.
+
+        [V8] Making V8 generated classes' GetTemplate() function public
+        https://bugs.webkit.org/show_bug.cgi?id=34026
+
+        * bindings/scripts/CodeGeneratorV8.pm: Generated code need not depend on V8CustomBinding.h, made GetTemplate() signature public.
+
 2010-02-01  Steve Block  <steveblock@google.com>
 
         Reviewed by Ariya Hidayat.
